# Cart-Optimizer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: configuration.md  deployment.md  development.md  user-guide.md
docs/architecture/: overview.md
docs/architecture/adr/: 0001-record-architecture-decisions.md  0002-exact-optimization-with-cp-sat.md  0003-language-and-stack.md  0004-license-apache-2.0.md  0005-v0-scope-and-data-model.md  0006-frontend-architecture.md  0007-single-page-dashboard-ux.md  0008-product-led-redesign.md
src/cart_optimizer/: __init__.py
src/cart_optimizer/api/: __init__.py  main.py
src/cart_optimizer/application/: __init__.py  optimize.py
src/cart_optimizer/domain/: __init__.py  models.py  money.py
src/cart_optimizer/domain/optimization/: __init__.py  engine.py  result.py
src/cart_optimizer/web/static/: app.js  i18n.js  index.html  styles.css
tests/: test_api.py  test_models.py  test_money.py  test_optimization.py
